Renamed files and links to index.html to not show .html name. Fixed bug with no splash animation on main page. Removed link to website behind main image.

--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@ body {
   margin: -5em -10em;
   text-align: center;
 }
-a { 
-  text-decoration: none;
-  color: inherit;
-}
 
 body * {
   -webkit-touch-callout: none; /* iOS Safari */
@@ -42,35 +38,22 @@ body * {
                                 supported by Chrome, Edge, Opera and Firefox */
 }
 
-.main_ref {
+#main_ref {
   position: relative;
   display: block;
   overflow: hidden;
-  width: 1.5em;
-  height: 1.5em;
+  width: 4em;
+  height: 4em;
   margin: 0 auto;
-  background-color: transparent;
-  font-size: 3em;
-  line-height: 3em;
-  color: transparent;
+  padding: 0.6em;
+
+  background-color: #f0f0f0;
   border-radius: 50%;
-  border: 0em solid #39F;
+
   transition: all .15s ease-in-out;
   opacity: 0;
   animation: logo .25s ease-out 4.4s 1 normal forwards;
-  
 }
-
-img {
-  width: 1.5em;
-  height: 1.5em;
-  display: block;
-  padding: 0.2em;
-  background-color: #f0f0f0;
-}
-
-h1 a:hover, h1 a:focus { background-color: #39F; }
-h1 a:active { transform: scale(.8); }
 
 @keyframes logo {
   0%   { transform: rotate(25deg) scale(.01); opacity: 0; }
@@ -78,57 +61,7 @@ h1 a:active { transform: scale(.8); }
   100% { transform: scale(1); opacity: 1; }
 }
 
-@keyframes fade-in {
-  0%   { transform: rotate(25deg) scale(.01); opacity: 0; }
-  70%  { transform: scale(1.4); opacity: 1; }
-  100% { transform: scale(1); opacity: 1; }
-}
-
-.pages a.animated, a.animated, .contact a.animated {
-  animation: fade-in 0.5s ease-out 0.0s 1 normal forwards;
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-h1 em {
-  position: absolute;
-  display: block;
-  top: .5em;
-  left: .4375em;
-  font-size: .5em;
-  line-height: 1em;
-  color: #FFF;
-}
-
-h1 em:last-child {
-  top: .5em;
-  left: 1em;
-}
-
-h2 {
-  display: block;
-  height: 1.5em;
-  margin: 1.5em 0;
-  color: #606060;
-  line-height: 1.25em;
-}
-
-hr {
-  position: relative;
-  width: 4em;
-  height: 1px;
-  background: #202020;
-  margin: 1em auto;
-}
-.slogan {
+.typer-wrapper {
   position: relative;
   display: block;
   overflow: visible; 
@@ -140,7 +73,7 @@ hr {
   box-sizing: content-box;
 }
 
-.slogan span {
+.typer-wrapper span {
   display: block;
   width: 100%;
 }
@@ -154,13 +87,7 @@ hr {
 }
 
 .pages a {
-    display: inline-block;
-    overflow: hidden;
-    line-height: 2em;
     margin: 0.7em;
-    color: #f0f0f0;
-    font-size: 1.5em;
-    transition: all .15s ease-in-out;
 }
 
 .contact {
@@ -170,21 +97,23 @@ hr {
   margin: -1em auto 1.5em auto;
 }
 
-.contact a {
+a { 
+  text-decoration: none;
   display: inline-block;
   overflow: hidden;
-  opacity: 1;
-  width: 2em;
   line-height: 2em;
-  margin: 0 .20em;
   color: #f0f0f0;
   font-size: 1.5em;
   transition: all .15s ease-in-out;
-  border-radius: 50%;
 }
 
-.contact a:hover { color: rgb(92, 92, 92) !important; }
-.pages a:hover { color: rgb(92, 92, 92) !important; }
+.contact a {
+  margin: 0 .20em;
+  border-radius: 50%;
+  width: 2em;
+}
+
+a:hover { color: rgb(92, 92, 92) !important; }
 
 canvas {
   display: block;
